# mpesa-py

./: .env.example  README.md  pyproject.toml
examples/: c2b_register.py  stk_push.py
fastapi_starter/: .env.example  README.md  main.py  requirements.txt
mpesa/: __init__.py  auth.py  b2c.py  c2b.py  client.py  exceptions.py  models.py  stk.py
