[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpesa-py"
version = "0.1.0"
description = "Clean, async-first Python SDK for the Safaricom M-PESA Daraja API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Moses Karanja", email = "your@email.com" }]
keywords = ["mpesa", "daraja", "safaricom", "kenya", "payments", "fintech", "m-pesa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage     = "https://github.com/Triad-a/mpesa-py"
Repository   = "https://github.com/Triad-a/mpesa-py"
Issues       = "https://github.com/Triad-a/mpesa-py/issues"
Changelog    = "https://github.com/Triad-a/mpesa-py/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
